<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundcarfuel"
    android:padding="15dp"
    tools:context=".Alcool_ou_Gasolina">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/archivo_black"
        android:maxLines="1"
        android:paddingTop="120dp"
        android:text="@string/alcool_ou_gasolina"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/Edittext_ValorAlcool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:background="@drawable/botao_normal"
        android:fontFamily="casual"
        android:hint="@string/valor_do_litro_de_alcool"
        android:inputType="numberDecimal"
        android:padding="12dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/Edittext_ValorGasolina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="260dp"
        android:background="@drawable/botao_normal"
        android:fontFamily="casual"
        android:hint="@string/valor_do_litro_de_gasolina"
        android:inputType="numberDecimal"
        android:padding="12dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_calc_consumo_percurso"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/botao_arrendondado"
        android:fontFamily="casual"
        android:padding="12dp"
        android:text="@string/calcular"
        android:textSize="18sp" />


</RelativeLayout>